src/dart_vips_ops.h

// ----- Load / Save --------------------------------------------------------

// vips_image_new_from_file with no extra vararg options (adds NULL sentinel)
VipsImage* dart_vips_image_new_from_file(const char* path);
// vips_image_new_from_buffer with no extra options
VipsImage* dart_vips_image_from_buffer(
    const void* buf, size_t len);
// ----- Geometry -----------------------------------------------------------

// vips_crop / extract_area
int dart_vips_crop(
    VipsImage* in,
    VipsImage** out,
    int left, int top,
    int width, int height);
// vips_embed
int dart_vips_embed(
    VipsImage* in,
    VipsImage** out,
    int x, int y,
    int width, int height,
    VipsExtend extend);
// vips_flip
int dart_vips_flip(
    VipsImage* in,
    VipsImage** out,
    VipsDirection direction);
// vips_autorot
int dart_vips_autorot(
    VipsImage* in,
    VipsImage** out);
// vips_flatten with optional RGB background (r,g,b each 0–255)
int dart_vips_flatten(
    VipsImage* in,
    VipsImage** out,
    double bg_r, double bg_g, double bg_b);
// ----- Color --------------------------------------------------------------

// vips_colourspace
int dart_vips_colourspace(
    VipsImage* in,
    VipsImage** out,
    VipsInterpretation space);
// vips_icc_transform
int dart_vips_icc_transform(
    VipsImage* in,
    VipsImage** out,
    const char* output_profile);
// ----- Composite ----------------------------------------------------------

// vips_composite2
int dart_vips_composite2(
    VipsImage* base,
    VipsImage* overlay,
    VipsImage** out,
    VipsBlendMode mode,
    int x, int y);
// ----- GObject lifecycle (wrapped so ffigen picks them up) ----------------

// These are already in the libvips dynamic library; we expose them via wrapper
// declarations so ffigen includes them without needing GLib in include-directives.
void dart_g_object_ref(VipsImage* obj);
void dart_g_object_unref(VipsImage* obj);
void dart_g_free(void* mem);
// ----- Metadata -----------------------------------------------------------

// vips_image_get_int
int dart_vips_image_get_int(VipsImage* in, const char* name, int* out);
// vips_image_get_double
int dart_vips_image_get_double(VipsImage* in, const char* name, double* out);
// Returns 0 on success, fills *out with a newly-allocated string (caller must g_free).
int dart_vips_image_get_string(
    VipsImage* in,
    const char* name,
    char** out);
// vips_image_get_fields — returns NULL-terminated array of name strings.
// Each name is owned by libvips; do NOT free individual names, but DO
// call g_strfreev() on the returned array.
char** dart_vips_image_get_fields(VipsImage* in);