lib/src/bindings/libvips_bindings.dart

// AUTO-GENERATED FILE — DO NOT EDIT BY HAND.
// Run `dart run ffigen --config ffigen.yaml` to regenerate.
// ignore_for_file: type=lint, unused_element, camel_case_types, non_constant_identifier_names
// ignore_for_file: unnecessary_import, prefer_final_fields, unused_import
// ignore_for_file: unused_field, duplicate_ignore

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: unused_import
import 'dart:ffi' as ffi;

/// Auto-generated bindings for dart_vips C wrappers. DO NOT EDIT BY HAND.
class LibVipsOps {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  LibVipsOps(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  LibVipsOps.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  void dart_g_free(ffi.Pointer<ffi.Void> mem) {
    return _dart_g_free(mem);
  }

  late final _dart_g_freePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'dart_g_free',
      );
  late final _dart_g_free = _dart_g_freePtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  void dart_g_object_ref(ffi.Pointer<VipsImage> obj) {
    return _dart_g_object_ref(obj);
  }

  late final _dart_g_object_refPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<VipsImage>)>>(
        'dart_g_object_ref',
      );
  late final _dart_g_object_ref = _dart_g_object_refPtr
      .asFunction<void Function(ffi.Pointer<VipsImage>)>();

  void dart_g_object_unref(ffi.Pointer<VipsImage> obj) {
    return _dart_g_object_unref(obj);
  }

  late final _dart_g_object_unrefPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<VipsImage>)>>(
        'dart_g_object_unref',
      );
  late final _dart_g_object_unref = _dart_g_object_unrefPtr
      .asFunction<void Function(ffi.Pointer<VipsImage>)>();

  int dart_vips_autorot(
    ffi.Pointer<VipsImage> in$,
    ffi.Pointer<ffi.Pointer<VipsImage>> out,
  ) {
    return _dart_vips_autorot(in$, out);
  }

  late final _dart_vips_autorotPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<VipsImage>,
            ffi.Pointer<ffi.Pointer<VipsImage>>,
          )
        >
      >('dart_vips_autorot');
  late final _dart_vips_autorot = _dart_vips_autorotPtr
      .asFunction<
        int Function(
          ffi.Pointer<VipsImage>,
          ffi.Pointer<ffi.Pointer<VipsImage>>,
        )
      >();

  int dart_vips_colourspace(
    ffi.Pointer<VipsImage> in$,
    ffi.Pointer<ffi.Pointer<VipsImage>> out,
    VipsInterpretation space,
  ) {
    return _dart_vips_colourspace(in$, out, space.value);
  }

  late final _dart_vips_colourspacePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<VipsImage>,
            ffi.Pointer<ffi.Pointer<VipsImage>>,
            ffi.Int,
          )
        >
      >('dart_vips_colourspace');
  late final _dart_vips_colourspace = _dart_vips_colourspacePtr
      .asFunction<
        int Function(
          ffi.Pointer<VipsImage>,
          ffi.Pointer<ffi.Pointer<VipsImage>>,
          int,
        )
      >();

  int dart_vips_composite2(
    ffi.Pointer<VipsImage> base,
    ffi.Pointer<VipsImage> overlay,
    ffi.Pointer<ffi.Pointer<VipsImage>> out,
    VipsBlendMode mode,
    int x,
    int y,
  ) {
    return _dart_vips_composite2(base, overlay, out, mode.value, x, y);
  }

  late final _dart_vips_composite2Ptr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<VipsImage>,
            ffi.Pointer<VipsImage>,
            ffi.Pointer<ffi.Pointer<VipsImage>>,
            ffi.UnsignedInt,
            ffi.Int,
            ffi.Int,
          )
        >
      >('dart_vips_composite2');
  late final _dart_vips_composite2 = _dart_vips_composite2Ptr
      .asFunction<
        int Function(
          ffi.Pointer<VipsImage>,
          ffi.Pointer<VipsImage>,
          ffi.Pointer<ffi.Pointer<VipsImage>>,
          int,
          int,
          int,
        )
      >();

  int dart_vips_crop(
    ffi.Pointer<VipsImage> in$,
    ffi.Pointer<ffi.Pointer<VipsImage>> out,
    int left,
    int top,
    int width,
    int height,
  ) {
    return _dart_vips_crop(in$, out, left, top, width, height);
  }

  late final _dart_vips_cropPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<VipsImage>,
            ffi.Pointer<ffi.Pointer<VipsImage>>,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Int,
          )
        >
      >('dart_vips_crop');
  late final _dart_vips_crop = _dart_vips_cropPtr
      .asFunction<
        int Function(
          ffi.Pointer<VipsImage>,
          ffi.Pointer<ffi.Pointer<VipsImage>>,
          int,
          int,
          int,
          int,
        )
      >();

  int dart_vips_embed(
    ffi.Pointer<VipsImage> in$,
    ffi.Pointer<ffi.Pointer<VipsImage>> out,
    int x,
    int y,
    int width,
    int height,
    VipsExtend extend,
  ) {
    return _dart_vips_embed(in$, out, x, y, width, height, extend.value);
  }

  late final _dart_vips_embedPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<VipsImage>,
            ffi.Pointer<ffi.Pointer<VipsImage>>,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.UnsignedInt,
          )
        >
      >('dart_vips_embed');
  late final _dart_vips_embed = _dart_vips_embedPtr
      .asFunction<
        int Function(
          ffi.Pointer<VipsImage>,
          ffi.Pointer<ffi.Pointer<VipsImage>>,
          int,
          int,
          int,
          int,
          int,
        )
      >();

  int dart_vips_flatten(
    ffi.Pointer<VipsImage> in$,
    ffi.Pointer<ffi.Pointer<VipsImage>> out,
    double bg_r,
    double bg_g,
    double bg_b,
  ) {
    return _dart_vips_flatten(in$, out, bg_r, bg_g, bg_b);
  }

  late final _dart_vips_flattenPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<VipsImage>,
            ffi.Pointer<ffi.Pointer<VipsImage>>,
            ffi.Double,
            ffi.Double,
            ffi.Double,
          )
        >
      >('dart_vips_flatten');
  late final _dart_vips_flatten = _dart_vips_flattenPtr
      .asFunction<
        int Function(
          ffi.Pointer<VipsImage>,
          ffi.Pointer<ffi.Pointer<VipsImage>>,
          double,
          double,
          double,
        )
      >();

  int dart_vips_flip(
    ffi.Pointer<VipsImage> in$,
    ffi.Pointer<ffi.Pointer<VipsImage>> out,
    VipsDirection direction,
  ) {
    return _dart_vips_flip(in$, out, direction.value);
  }

  late final _dart_vips_flipPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<VipsImage>,
            ffi.Pointer<ffi.Pointer<VipsImage>>,
            ffi.UnsignedInt,
          )
        >
      >('dart_vips_flip');
  late final _dart_vips_flip = _dart_vips_flipPtr
      .asFunction<
        int Function(
          ffi.Pointer<VipsImage>,
          ffi.Pointer<ffi.Pointer<VipsImage>>,
          int,
        )
      >();

  int dart_vips_icc_transform(
    ffi.Pointer<VipsImage> in$,
    ffi.Pointer<ffi.Pointer<VipsImage>> out,
    ffi.Pointer<ffi.Char> output_profile,
  ) {
    return _dart_vips_icc_transform(in$, out, output_profile);
  }

  late final _dart_vips_icc_transformPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<VipsImage>,
            ffi.Pointer<ffi.Pointer<VipsImage>>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('dart_vips_icc_transform');
  late final _dart_vips_icc_transform = _dart_vips_icc_transformPtr
      .asFunction<
        int Function(
          ffi.Pointer<VipsImage>,
          ffi.Pointer<ffi.Pointer<VipsImage>>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  ffi.Pointer<VipsImage> dart_vips_image_from_buffer(
    ffi.Pointer<ffi.Void> buf,
    int len,
  ) {
    return _dart_vips_image_from_buffer(buf, len);
  }

  late final _dart_vips_image_from_bufferPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<VipsImage> Function(ffi.Pointer<ffi.Void>, ffi.Size)
        >
      >('dart_vips_image_from_buffer');
  late final _dart_vips_image_from_buffer = _dart_vips_image_from_bufferPtr
      .asFunction<
        ffi.Pointer<VipsImage> Function(ffi.Pointer<ffi.Void>, int)
      >();

  int dart_vips_image_get_double(
    ffi.Pointer<VipsImage> in$,
    ffi.Pointer<ffi.Char> name,
    ffi.Pointer<ffi.Double> out,
  ) {
    return _dart_vips_image_get_double(in$, name, out);
  }

  late final _dart_vips_image_get_doublePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<VipsImage>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Double>,
          )
        >
      >('dart_vips_image_get_double');
  late final _dart_vips_image_get_double = _dart_vips_image_get_doublePtr
      .asFunction<
        int Function(
          ffi.Pointer<VipsImage>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Double>,
        )
      >();

  ffi.Pointer<ffi.Pointer<ffi.Char>> dart_vips_image_get_fields(
    ffi.Pointer<VipsImage> in$,
  ) {
    return _dart_vips_image_get_fields(in$);
  }

  late final _dart_vips_image_get_fieldsPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Pointer<ffi.Char>> Function(ffi.Pointer<VipsImage>)
        >
      >('dart_vips_image_get_fields');
  late final _dart_vips_image_get_fields = _dart_vips_image_get_fieldsPtr
      .asFunction<
        ffi.Pointer<ffi.Pointer<ffi.Char>> Function(ffi.Pointer<VipsImage>)
      >();

  int dart_vips_image_get_int(
    ffi.Pointer<VipsImage> in$,
    ffi.Pointer<ffi.Char> name,
    ffi.Pointer<ffi.Int> out,
  ) {
    return _dart_vips_image_get_int(in$, name, out);
  }

  late final _dart_vips_image_get_intPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<VipsImage>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Int>,
          )
        >
      >('dart_vips_image_get_int');
  late final _dart_vips_image_get_int = _dart_vips_image_get_intPtr
      .asFunction<
        int Function(
          ffi.Pointer<VipsImage>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Int>,
        )
      >();

  int dart_vips_image_get_string(
    ffi.Pointer<VipsImage> in$,
    ffi.Pointer<ffi.Char> name,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out,
  ) {
    return _dart_vips_image_get_string(in$, name, out);
  }

  late final _dart_vips_image_get_stringPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<VipsImage>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Pointer<ffi.Char>>,
          )
        >
      >('dart_vips_image_get_string');
  late final _dart_vips_image_get_string = _dart_vips_image_get_stringPtr
      .asFunction<
        int Function(
          ffi.Pointer<VipsImage>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
        )
      >();

  ffi.Pointer<VipsImage> dart_vips_image_new_from_file(
    ffi.Pointer<ffi.Char> path,
  ) {
    return _dart_vips_image_new_from_file(path);
  }
